Grammar corrections - changed the 'eg.' abbreviation to 'e.g.' in a couple of places.

--- a/docs/latex/develop.tex
+++ b/docs/latex/develop.tex
@@ -140,7 +140,7 @@ This mark up language is important for the creation of the \href{http://www.nmr-
 % Variable, function, and class names.
 \subsection{Variable, function, and class names}
 
-In relax a mixture of both camel case (eg. CamelCase)\index{camel case} and lower case with underscores is used.
+In relax a mixture of both camel case (e.g. CamelCase)\index{camel case} and lower case with underscores is used.
 Despite the variability there are fixed rules which should be adhered to.
 These naming conventions should be observed at all times.
 
